[tool.poetry]
name = "hacker-news"
version = "0.1.0"
description = ""
authors = ["yusuf"]
readme = "README.md"
packages = [{include = "hacker_news"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
graphene-django = "^3.0.0"
django-filter = "^22.1"
django-graphql-jwt = "^0.3.4"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
